Add complete Docker containerization with separate containers
Created comprehensive Docker setup:

Dockerfiles:
- Dockerfile - FastAPI application (Python 3.11 + Tesseract OCR)
- Dockerfile.worker - Celery workers (already existed, updated)
- frontend/Dockerfile - React/TypeScript with Nginx multi-stage build
- frontend/nginx.conf - Production Nginx config with API proxy

docker-compose.yml - Complete orchestration:
- postgres: PostgreSQL 16 with pgvector extension
- redis: Redis 7 for task queue with persistence
- api: FastAPI server with health checks
- worker: Celery workers (scalable with --scale worker=N)
- frontend: React UI with Nginx

Features:
- All containers include health checks
- Dedicated Docker network
- Persistent volumes for data
- Environment-based configuration
- Auto-restart policies
- Horizontal worker scaling support
- Volume mounts for documents, logs, config

Documentation:
- DOCKER_DEPLOYMENT.md - Complete deployment guide
- .dockerignore - Optimized build context

Usage:
  docker-compose up -d                    # Start all services
  docker-compose up --scale worker=10     # Scale workers
  Access: http://localhost (frontend) and http://localhost:8000 (API)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3.8'
 
 services:
+  # PostgreSQL database with pgvector extension
   postgres:
     image: pgvector/pgvector:pg16
     container_name: doc_pipeline_postgres
@@ -18,7 +19,117 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+    networks:
+      - doc_pipeline
+
+  # Redis for Celery task queue
+  redis:
+    image: redis:7-alpine
+    container_name: doc_pipeline_redis
+    command: redis-server --appendonly yes
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
+    networks:
+      - doc_pipeline
+
+  # FastAPI application
+  api:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: doc_pipeline_api
+    environment:
+      - DATABASE_URL=postgresql://docuser:devpassword@postgres:5432/documents
+      - REDIS_URL=redis://redis:6379/0
+      - USE_DATABASE=true
+      - STORE_FULL_CONTENT=true
+      - EMBEDDING_PROVIDER=ollama
+      - EMBEDDING_MODEL=nomic-embed-text
+      - OLLAMA_HOST=http://host.docker.internal:11434
+    ports:
+      - "8000:8000"
+    volumes:
+      - ./documents:/app/documents
+      - ./logs:/app/logs
+      - ./config:/app/config
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/api/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+    networks:
+      - doc_pipeline
+    restart: unless-stopped
+
+  # Celery workers for parallel processing
+  worker:
+    build:
+      context: .
+      dockerfile: Dockerfile.worker
+    container_name: doc_pipeline_worker
+    environment:
+      - DATABASE_URL=postgresql://docuser:devpassword@postgres:5432/documents
+      - REDIS_URL=redis://redis:6379/0
+      - USE_DATABASE=true
+      - STORE_FULL_CONTENT=true
+      - EMBEDDING_PROVIDER=ollama
+      - EMBEDDING_MODEL=nomic-embed-text
+      - OLLAMA_HOST=http://host.docker.internal:11434
+    volumes:
+      - ./documents:/app/documents
+      - ./logs:/app/logs
+      - ./config:/app/config
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    command: celery -A api.tasks worker --loglevel=info --concurrency=4
+    networks:
+      - doc_pipeline
+    restart: unless-stopped
+    deploy:
+      replicas: 1  # Scale with: docker-compose up --scale worker=5
+
+  # React frontend
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    container_name: doc_pipeline_frontend
+    ports:
+      - "80:80"
+    depends_on:
+      - api
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost/"]
+      interval: 30s
+      timeout: 3s
+      retries: 3
+      start_period: 5s
+    networks:
+      - doc_pipeline
+    restart: unless-stopped
 
 volumes:
   postgres_data:
     driver: local
+  redis_data:
+    driver: local
+
+networks:
+  doc_pipeline:
+    driver: bridge
